tests/parsing/invalid/parameter_order/bus.fbd
type my_config(width=10, foo) config
	width = width
